[gd_scene load_steps=34 format=2]

[ext_resource path="res://characters/Player.gd" type="Script" id=1]
[ext_resource path="res://circle.png" type="Texture" id=2]
[ext_resource path="res://sprites/heart_full.png" type="Texture" id=3]
[ext_resource path="res://sprites/heart_empty.png" type="Texture" id=4]
[ext_resource path="res://characters/HealthDisplay.gd" type="Script" id=5]
[ext_resource path="res://ui/KleintenDynFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://characters/LevelDisplay.gd" type="Script" id=7]
[ext_resource path="res://sprites/player.png" type="Texture" id=8]
[ext_resource path="res://sfx/MC/pickup health.wav" type="AudioStream" id=9]
[ext_resource path="res://sfx/MC/max health increase.wav" type="AudioStream" id=10]
[ext_resource path="res://sfx/MC/electric sound loop.wav" type="AudioStream" id=11]
[ext_resource path="res://sfx/MC/shoot string.wav" type="AudioStream" id=12]
[ext_resource path="res://sfx/MC/take damage 2.wav" type="AudioStream" id=13]
[ext_resource path="res://sfx/MC/take damage 1.wav" type="AudioStream" id=14]
[ext_resource path="res://sfx/PlayRandomSound.gd" type="Script" id=15]
[ext_resource path="res://sfx/MC/take damage 3.wav" type="AudioStream" id=16]
[ext_resource path="res://sfx/MC/take damage 4.wav" type="AudioStream" id=17]
[ext_resource path="res://sfx/MC/footsteps/step1.wav" type="AudioStream" id=18]
[ext_resource path="res://sfx/MC/footsteps/step4.wav" type="AudioStream" id=19]
[ext_resource path="res://sfx/MC/footsteps/step2.wav" type="AudioStream" id=20]
[ext_resource path="res://sfx/MC/footsteps/step3.wav" type="AudioStream" id=21]
[ext_resource path="res://sfx/MC/footsteps/step5.wav" type="AudioStream" id=22]
[ext_resource path="res://sfx/MC/amped up electric sound loop.wav" type="AudioStream" id=23]
[ext_resource path="res://sfx/MC/MC DEATH.wav" type="AudioStream" id=24]

[sub_resource type="Animation" id=1]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "invincible"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 16, 17 ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../StepSounds")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "play"
} ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 5.0

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 0.784314, 0.160784, 0.160784, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 11.0

[sub_resource type="Environment" id=9]
background_mode = 4
glow_enabled = true
glow_intensity = 0.4
glow_bloom = 0.2
glow_blend_mode = 0
adjustment_enabled = true
adjustment_contrast = 1.2

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 6
collision_mask = 17
script = ExtResource( 1 )
max_health = 7
max_speed = 200
move_accel = 40
rope_normal_color = Color( 0.545098, 0.552941, 1, 1 )
rope_kill_color = Color( 1, 1, 0.756863, 1 )
max_rope_width = 2.0
min_rope_width = 0.5
rope_kill_width = 1.2

[node name="Graphics" type="Node2D" parent="."]
z_index = 2

[node name="Sprite" type="Sprite" parent="Graphics"]
position = Vector2( 0, -4 )
texture = ExtResource( 8 )
vframes = 4
hframes = 8
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graphics"]
autoplay = "idle"
anims/dead = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/invincible = SubResource( 3 )
anims/run = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 0.207843, 0.207843, 1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="BulletCanCollideWithPlayerTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DeactivateRopeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 30.0

[node name="RopeKillAnimTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthDisplay" type="GridContainer" parent="CanvasLayer"]
modulate = Color( 0.278431, 0, 0, 1 )
margin_right = 40.0
margin_bottom = 40.0
columns = 10
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartDisplay" type="Control" parent="CanvasLayer/HealthDisplay"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="HeartFull" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartEmpty" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartDisplay2" type="Control" parent="CanvasLayer/HealthDisplay"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="HeartFull" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay2"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartEmpty" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay2"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartDisplay3" type="Control" parent="CanvasLayer/HealthDisplay"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="HeartFull" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay3"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartEmpty" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay3"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartDisplay4" type="Control" parent="CanvasLayer/HealthDisplay"]
margin_left = 60.0
margin_right = 76.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="HeartFull" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay4"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartEmpty" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay4"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartDisplay5" type="Control" parent="CanvasLayer/HealthDisplay"]
margin_left = 80.0
margin_right = 96.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="HeartFull" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay5"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartEmpty" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay5"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartDisplay6" type="Control" parent="CanvasLayer/HealthDisplay"]
margin_left = 100.0
margin_right = 116.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="HeartFull" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay6"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartEmpty" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay6"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartDisplay7" type="Control" parent="CanvasLayer/HealthDisplay"]
margin_left = 120.0
margin_right = 136.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="HeartFull" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay7"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartEmpty" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay7"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartDisplay8" type="Control" parent="CanvasLayer/HealthDisplay"]
margin_left = 140.0
margin_right = 156.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="HeartFull" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay8"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartEmpty" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay8"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartDisplay9" type="Control" parent="CanvasLayer/HealthDisplay"]
margin_left = 160.0
margin_right = 176.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="HeartFull" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay9"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartEmpty" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay9"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartDisplay10" type="Control" parent="CanvasLayer/HealthDisplay"]
margin_left = 180.0
margin_right = 196.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="HeartFull" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay10"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartEmpty" type="TextureRect" parent="CanvasLayer/HealthDisplay/HeartDisplay10"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathMessage" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -11.5
margin_right = 135.0
margin_bottom = 11.5
custom_fonts/font = ExtResource( 6 )
text = "You Died! Press 'R' to restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelDisplay" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -149.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 6 )
text = "Level 1/10"
align = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 6 )
anims/invincible = SubResource( 7 )

[node name="PickupsDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupsDetector"]
shape = SubResource( 8 )

[node name="JustKilledSomethingTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 9 )

[node name="ElectricSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
bus = "Sfx"

[node name="PowerfulElectricSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 23 )
volume_db = 8.0
bus = "Sfx"

[node name="PickedUpHealthSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
bus = "Sfx"

[node name="IncreasedHealthSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
bus = "Sfx"

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
bus = "Sfx"

[node name="StepSounds" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="StepSounds"]
stream = ExtResource( 18 )
volume_db = -5.0
bus = "Sfx"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="StepSounds"]
stream = ExtResource( 20 )
volume_db = -5.0
bus = "Sfx"

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="StepSounds"]
stream = ExtResource( 21 )
volume_db = -5.0
bus = "Sfx"

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="StepSounds"]
stream = ExtResource( 19 )
volume_db = -5.0
bus = "Sfx"

[node name="AudioStreamPlayer2D5" type="AudioStreamPlayer2D" parent="StepSounds"]
stream = ExtResource( 22 )
volume_db = -5.0
bus = "Sfx"

[node name="HurtSounds" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="HurtSounds"]
stream = ExtResource( 14 )
bus = "Sfx"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="HurtSounds"]
stream = ExtResource( 13 )
bus = "Sfx"

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="HurtSounds"]
stream = ExtResource( 16 )
bus = "Sfx"

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="HurtSounds"]
stream = ExtResource( 17 )
bus = "Sfx"

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
[connection signal="timeout" from="BulletCanCollideWithPlayerTimer" to="." method="bullet_can_collide_with_player"]
[connection signal="timeout" from="DeactivateRopeTimer" to="." method="deactivate_rope"]
[connection signal="timeout" from="RopeKillAnimTimer" to="." method="toggle_rope_graphics"]
[connection signal="timeout" from="JustKilledSomethingTimer" to="." method="set_just_killed_something_false"]
